Fix Slider text alignment

--- a/client/src/Root.scss
+++ b/client/src/Root.scss
@@ -7,7 +7,7 @@ body {
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #070a1d;
+  background-color: #000000;
 }
 
 html {
